user-avatar component only render the user avatar, no dropdown menu anymore

--- a/scss/partials/_user_avatar.scss
+++ b/scss/partials/_user_avatar.scss
@@ -1,7 +1,7 @@
 div.user-avatar {
   padding: 5px;
 
-  button.dropdown-toggle{
+  button.user-avatar-button{
     border: 0px solid transparent;
     background-color: transparent;
     width: 40px;
