--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -1,14 +1,13 @@
 div.fullscreen-topic {
-  opacity: 0;
-  position: fixed;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
   border-top: 4px solid $oc_yellow;
-  background-color: rgba(255, 255, 255, 0.98);
   z-index: 1036;
   overflow: auto;
+
+  &.initial {
+    opacity: 0;
+  }
 
   @include mobile(){
     background-color: rgba(255, 255, 255, 1);
