--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -30,6 +30,21 @@ div.topic-list{
     background-color: $oc_gray_6;
   }
 
+  div.selected-topic-container{
+    background-color: rgba(255, 255, 255, 0.98);
+    width: 100vw;
+    height: 100vh;
+    top: 0px;
+    left: 0px;
+    position: fixed;
+    z-index: 1036;
+
+    div.selected-topic, div.tr-selected-topic {
+      height: 100vh;
+      width: 100vw;
+    }
+  }
+
   div.topic-list-internal {
     list-style: none;
     padding: 0;
