topic and growth no data available style as the body

--- a/scss/partials/_topic_finances.scss
+++ b/scss/partials/_topic_finances.scss
@@ -1,3 +1,9 @@
+div.topic-body-inner{
+  p{
+    @include rich-editor-body();
+    padding: 0 20px !important;
+  }
+}
 div.section-container{
   div.pillbox-container.finances{
     background-color: transparent;
