--- a/scss/partials/_topic_growth.scss
+++ b/scss/partials/_topic_growth.scss
@@ -1,3 +1,10 @@
+div.topic-body-inner{
+  p{ 
+    @include rich-editor-body();
+    padding: 0 20px !important;
+  }
+}
+
 div.section-container{
   div.pillbox-container.growth{
     background-color: transparent;
