--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -136,7 +136,7 @@ div.fullscreen-topic {
 
       div.topic-body{
         @include rich-editor-body($oc_gray_5);
-        margin-top: 21px;
+        margin-top: 21px !important;
       }
 
       div.topic-attribution {
