--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -1,5 +1,22 @@
 div.topic-list {
 
+  div.topic-list-internal.sharing-mode {
+    div.topic {
+      opacity: 0.5;
+      border: 4px solid transparent;
+
+      &:hover {
+        opacity: 1;
+        border: 4px solid white;
+      }
+
+      &.sharing-selected {
+        opacity: 1;
+        border: 4px solid $oc_yellow;
+      }
+    }
+  }
+
   div.topic {
     margin: 0px;
     padding: 0px;
@@ -7,6 +24,7 @@ div.topic-list {
     background-color: #FCFCFC;
     border-radius: 2px;
     text-align: left;
+    border: 4px solid transparent;
     box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
 
     &.add-topic {
