--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -59,3 +59,4 @@
 @import "partials/_add_topic_popover";
 @import "partials/_atomic";
 @import "partials/_growth_metric_edit";
+@import "partials/_su_preview";
