include the new topics-columns component css

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -60,3 +60,4 @@
 @import "partials/_atomic";
 @import "partials/_growth_metric_edit";
 @import "partials/_su_preview";
+@import "partials/_topics_columns";
