--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -61,3 +61,5 @@
 @import "partials/_growth_metric_edit";
 @import "partials/_su_preview";
 @import "partials/_topics_columns";
+@import "partials/_menu_page";
+@import "partials/_su_snapshot_preview";
