--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -10,6 +10,25 @@ nav.oc-navbar {
   height: #{$navbar_height}px;
   box-shadow: 1px 4px 4px 0 rgba(0, 0, 0, 0.2);
 
+  div.su-snapshot-preview{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 60px;
+    background-color: rgba(78, 90, 107, 0.5);
+
+    div.preview-title {
+      width:200px;
+      margin: 20px auto;
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 1.5;
+      letter-spacing: 1px;
+      color: #ffffff;
+    }
+  }
+
   div.oc-navbar-header {
     position: relative;
     margin: 0 auto;
