fix drawer open/close

--- a/scss/partials/_menu_page.scss
+++ b/scss/partials/_menu_page.scss
@@ -4,7 +4,7 @@ div.page{
   top: 0px !important;
  
   background: #fff;
-  min-height: calc(100vh - #{$navbar_height}px - #{$footer_height}px);
+  min-height: 100vh;
 }
 
 .animating .page {
