--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -47,7 +47,7 @@ div.topic-list{
 
     div.sharing-header-inner{
       margin: 0px auto;
-      padding: 15px 30px;
+      padding: 13px 30px;
 
       div.sharing-header-left{
         float: left;
@@ -72,13 +72,14 @@ div.topic-list{
         text-align: center;
 
         button.share-snapshot-bt{
+          padding: 6px 20px;
           background-color: $oc_yellow;
           font-weight: 700;
           font-size: 12px;
           line-height: 1.5;
           letter-spacing: 1px;
           color: #4e5a6b;
-          ouline: none;
+          outline: none;
           border: 0px solid transparent;
         }
       }
