fix menu page height on su preview

--- a/scss/partials/_menu_page.scss
+++ b/scss/partials/_menu_page.scss
@@ -4,7 +4,7 @@ div.page{
   top: 0px !important;
  
   background: #fff;
-  min-height: 100vh;
+  min-height: calc(100vh - 40px);
 }
 
 .animating .page {
