align this is a preview text to the center

--- a/scss/partials/_su_snapshot_preview.scss
+++ b/scss/partials/_su_snapshot_preview.scss
@@ -30,6 +30,7 @@ div.su-snapshot-preview {
       text-align: center;
       color: $oc_gray_5;
       padding-top: 50px;
+      text-align: center;
     }
 
     div.preview-subtitle {
