--- a/scss/partials/_user_avatar.scss
+++ b/scss/partials/_user_avatar.scss
@@ -2,6 +2,8 @@ div.user-avatar {
   padding: 5px;
 
   button.user-avatar-button{
+    margin: 0;
+    padding: 0;
     border: 0px solid transparent;
     background-color: transparent;
     width: 40px;
