--- a/scss/partials/_su_preview.scss
+++ b/scss/partials/_su_preview.scss
@@ -14,10 +14,23 @@ div.su-preview{
     margin-left: 170px;
     margin-top: -230px;
 
+    &.share-copy-window {
+      margin-top: -120px;
+    }
+
+    &.slack-patched-window {
+      margin-top: -142px;
+    }
+
     button {
       background-color: transparent;
       outline: none;
       border: 0px solid transparent;
+
+      &:active, &:focus {
+        outline: none;
+        border: none;
+      }
 
       div.svg-icon{
         svg{
@@ -43,6 +56,15 @@ div.su-preview{
     &.share-link-copy {
       height: 230px;
       margin-top: -115px;
+    }
+
+    &.slack-message {
+      height: 275px;
+      margin-top: -137px;
+
+      div.su-preview-box {
+        margin-top: 0px;
+      }
     }
 
     input.su-title {
@@ -80,6 +102,9 @@ div.su-preview{
           border-radius: 2px;
           height: 50px;
           width: 70%;
+          font-size: 14px;
+          line-height: 1.2;
+          color: $oc_gray_5;
 
           &:active, &:focus {
             outline: none;
@@ -100,6 +125,11 @@ div.su-preview{
           cursor: pointer;
           outline: none;
           border: 0px solid transparent;
+
+          &:active, &:focus {
+            outline: none;
+            border: none;
+          }
         }
       }
 
@@ -110,6 +140,29 @@ div.su-preview{
         color: $oc_gray_5;
         cursor: pointer;
         opacity: 0.5;
+      }
+
+
+      label.slack-share-cta {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 1px;
+        color: $oc_gray_5;
+        cursor: pointer;
+        opacity: 0.5;
+      }
+
+      textarea.slack-share-textarea {
+        width: 100%;
+        height: 100px;
+        border: 1px solid rgba(78, 90, 107, 0.1);
+        font-family: $oc_headers_font;
+        font-size: 14px;
+        line-height: 1.2;
+        color: $oc_gray_5;
+        outline: none;
+        border-radius: 2px;
       }
 
       div.su-preview-title {
@@ -192,6 +245,11 @@ div.su-preview{
         margin-top: 15px;
         text-align: left;
 
+        &:active, &:focus {
+          outline: none;
+          border: none;
+        }
+
         label{
           padding-top: 13px;
           padding-left: 10px;
@@ -228,6 +286,11 @@ div.su-preview{
         margin-top: 15px;
         text-align: left;
 
+        &:active, &:focus {
+          outline: none;
+          border: none;
+        }
+
         label{
           padding-top: 13px;
           padding-left: 10px;
@@ -257,9 +320,9 @@ div.su-preview{
       }
     }
 
-    button.cancel-button {
-      outline: none;
-      background-color: transparent;
+    button.slack-send-button{
+      padding-top: 5px;
+      background-color: $oc_yellow;
       width: 106px;
       height: 30px;
       border: solid 1px rgba(78, 90, 107, 0.5);
@@ -270,7 +333,38 @@ div.su-preview{
       color: rgba(78, 90, 107, 0.5);
       position: absolute;
       bottom: 20px;
+      right: 146px;
+      outline: nonde;
+      box-shadow: none;
+      border: none;
+
+      &:active, &:focus {
+        outline: none;
+        border: none;
+      }
+    }
+
+    button.cancel-button {
+      padding-top: 5px;
+      background-color: transparent;
+      width: 106px;
+      height: 30px;
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 1.5;
+      letter-spacing: 1px;
+      color: rgba(78, 90, 107, 0.5);
+      position: absolute;
+      bottom: 20px;
       right: 20px;
+      outline: none;
+      box-shadow: none;
+      border: none;
+
+      &:active, &:focus {
+        outline: none;
+        border: none;
+      }
     }
   }
 }
