use inline instead of inline-block to let links wrap new lines

--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -118,11 +118,10 @@
       cursor: pointer;
       pointer-events: auto;
       height: 1.4em;
-      display: inline-block;
-      height: 1.25em;
+      display: inline;
+      word-spacing: normal;
       text-decoration: none;
       color: black;
-      pointer-events: none;
       border-bottom: 6px solid $oc_yellow;
     }
   }
