--- a/scss/partials/_su_preview.scss
+++ b/scss/partials/_su_preview.scss
@@ -86,7 +86,7 @@ div.su-preview{
 
       label.share-link-cta{
         font-weight: 700;
-        font-size: 18px;
+        font-size: 12px;
         line-height: 1.5;
         letter-spacing: 1px;
         color: $oc_gray_5;
@@ -96,13 +96,14 @@ div.su-preview{
 
       div.share-link-box {
         width: 100%;
+        margin-top: 10px;
 
         input.share-link-input {
           border: 1px solid rgba(78, 90, 107, 0.1);
           border-radius: 2px;
           height: 50px;
           width: 70%;
-          font-size: 14px;
+          font-size: 21px;
           line-height: 1.2;
           color: $oc_gray_5;
 
@@ -140,6 +141,7 @@ div.su-preview{
         color: $oc_gray_5;
         cursor: pointer;
         opacity: 0.5;
+        text-decoration: underline;
       }
 
 
@@ -325,7 +327,6 @@ div.su-preview{
       background-color: $oc_yellow;
       width: 106px;
       height: 30px;
-      border: solid 1px rgba(78, 90, 107, 0.5);
       font-weight: 700;
       font-size: 12px;
       line-height: 1.5;
@@ -336,7 +337,7 @@ div.su-preview{
       right: 146px;
       outline: nonde;
       box-shadow: none;
-      border: none;
+      border: solid 1px rgba(78, 90, 107, 0.5);
 
       &:active, &:focus {
         outline: none;
@@ -347,6 +348,7 @@ div.su-preview{
     button.cancel-button {
       padding-top: 5px;
       background-color: transparent;
+      border: solid 1px rgba(78, 90, 107, 0.5);
       width: 106px;
       height: 30px;
       font-weight: 700;
@@ -359,7 +361,6 @@ div.su-preview{
       right: 20px;
       outline: none;
       box-shadow: none;
-      border: none;
 
       &:active, &:focus {
         outline: none;
