add main img.small-loading size to base style

--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -24,6 +24,11 @@ html, body {
   width: 100vw;
 }
 
+img.small-loading {
+  width: 15px;
+  height: 15px;
+}
+
 .no-scroll {
   overflow: hidden;
 }
