--- a/scss/partials/_topic_overlay_edit.scss
+++ b/scss/partials/_topic_overlay_edit.scss
@@ -3,7 +3,7 @@ div.fullscreen-topic-edit {
   min-width: 302px;
   margin: #{$navbar_height}px auto 30px;
   position: relative;
-  min-height: calc(100vh - #{$navbar_height}px - 60px - 4px);
+  min-height: calc(100vh - #{$navbar_height}px - 60px);
 
   @include mobile(){
     margin-top: 40px;
