fix growth and finances no data line height

--- a/scss/partials/_topic_finances.scss
+++ b/scss/partials/_topic_finances.scss
@@ -1,7 +1,8 @@
 div.topic-body-inner{
   p{
     @include rich-editor-body();
-    padding: 0 20px !important;
+    padding: 5px 20px !important;
+    line-height: 1.2 !important;
   }
 }
 div.section-container{
