fix archive button background color

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -59,7 +59,7 @@ div.fullscreen-topic {
     letter-spacing: 1px;
     color: $oc_gray_5;
     outline: none;
-    border: none;
+    background-color: transparent;
 
     div.svg-icon {
       float: left;
