fix page height to avoid white border under the yellow line on big screens

--- a/scss/partials/_menu_page.scss
+++ b/scss/partials/_menu_page.scss
@@ -4,7 +4,7 @@ div.page{
   top: 0px !important;
  
   background: #fff;
-  min-height: calc(100vh - 81px);
+  min-height: calc(100vh - #{$navbar_height}px);
 }
 
 .animating .page {
