add slide animation to the fade when switching topic from left to right and vice versa

--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -153,6 +153,9 @@ div.selected-topic-container{
   border-top: 4px solid $oc_yellow;
 
   div.selected-topic, div.tr-selected-topic {
+    position: absolute;
+    top: 0px;
+    left: 0px;
     height: 100%;
     width: 100%;
   }
