fix page height when animating the menu drawer

--- a/scss/partials/_menu_page.scss
+++ b/scss/partials/_menu_page.scss
@@ -10,6 +10,7 @@ div.page{
 .animating .page {
   transition: transform .25s ease-in-out;
   -webkit-transition: -webkit-transform .25s ease-in-out;
+  min-height: 100vh;
 }
 
 .animating.left .page {
